# mobility-analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  llm.ipynb  pyproject.toml
.github/workflows/: python-tests.yml
dbt-transformation/: dbt_project.yml  profiles.yml  vars.yml
dbt-transformation/docs/: overview.md
dbt-transformation/models/: exposure.yml  schema.yml  source.yml  unit_test.yml
dbt-transformation/models/analytics/: available_emplacement_by_city.sql  city_available_emplacement.sql  city_station_status.sql  department_available_emplacement.sql  department_station_status.sql  department_total_capacity.sql  global_metrics.sql  global_status.sql  map_station.sql  mean_bicycle_available_by_station.sql  total_capacity_by_city.sql
dbt-transformation/models/consolidate/: city.sql  station.sql
dbt-transformation/models/staging/: stg_city.sql  stg_station.sql  stg_station_statement.sql
dbt-transformation/models/star_model/: fact_station_statement.sql
src/: db.py  ingestion.py  init_db.py  pipeline.py  run_dbt.py  ui.py  utils.py
tests/: test_db.py
