[project]
name = "mobility-analysis"
version = "0.7.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.10.11",
    "dbt-postgres>=1.10.0",
    "langchain[google-genai]>=1.2.13",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.50",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "ruff>=0.13.0",
]

[tool.ruff.lint]
select = ["E","F","I"]
