[project]
name = "mobility-analysis"
version = "0.9.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.0",
    "dbt-postgres>=1.10.0",
    "pandas>=3.0.0",
    "plotly>=6.3.0",
    "requests>=2.34.0",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.13.0",
]

[tool.ruff.lint]
select = ["E","F","I"]
